--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -14,6 +14,12 @@ body {
     font-family: "Inconsolata";
     height: 100%;
 }
+
+p {
+	font:30px
+
+}
+
 a {
     text-decoration: none;
     color: $accent;
