--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -12,12 +12,8 @@ html {
 body {
     margin: 0;
     font-family: "Inconsolata";
+    font-size: 30px;
     height: 100%;
-}
-
-p {
-	font:30px
-
 }
 
 a {
