--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -11,7 +11,7 @@ html {
 }
 body {
     margin: 0;
-    font-family: "Inconsolata";
+    font-family: "Optima";
     font-size: 20px;
     height: 100%;
 }
